--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "typescript": "^3.7.5"
     },
     "dependencies": {
-        "axios": "^0.19.2"
+        "axios": "^0.19.2",
+        "kayn": "^0.10.2"
     }
 }
